# hedl

./: .claudeignore  .gitignore  .hedl-tier  ADOPTERS.md  CHANGELOG.md  CLAUDE.md  README.md  hedl.toml  pyproject.toml  requirements-ci.txt
.claude/: settings.json  startup.sh
.claude/agents/: determinism-auditor.md  edge-case-hunter.md  existential-challenger.md  historian.md  review-dispatcher.md  scope-auditor.md  security-auditor.md  simplicity-enforcer.md
.claude/commands/: adversarial-review.md  iterate.md  phase-complete.md  pr-ready.md  start-session.md
.claude/scripts/: posttooluse_lint.py  record_insights.py  stop_reminder.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: am_i_done.py  budget_manager.py  check_markdown_schema.py  check_pr_template.py  contribute.py  reflect.py  release.py
.github/workflows/: am-i-done.yml  codeql.yml
.obsidian/: app.json  core-plugins.json
.work/: context.json  session.json  work.json
.work/config/: markdown-schemas.json
.work/decisions/: ADR-001-distribution-as-agent-skill.md  ADR-002-tiered-adoption.md  ADR-003-deterministic-over-inference.md  ADR-004-two-version-axes.md  ADR-005-self-improvement-human-gated.md  ADR-006-pristine-repo-history.md  ADR-007-naming-convention.md  ADR-008-framework-vs-lume-test.md  ADR-009-opinionated-defaults-configurable.md  ADR-010-honesty-over-marketing.md  phase-1-retro.md  (+22 more)
docs/: agents.md  alternatives.md  commands.md  getting-started.md  name.md  review-panels.md  self-improvement.md  spec-pipeline.md  standards.md  team-tier.md  versioning.md
(+179 files in other folders)
