[project]
name = "hedl"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pymarkdownlnt==0.9.37",
    "pytest==9.0.3",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["skill/hedl/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-length enforced separately

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
